css/blog.css
@font-face
{
    font-family: "Symbols";
    src: url(https://cdnjs.cloudflare.com/ajax/libs/winjs/4.4.3/fonts/Symbols.ttf);
}

.icon
{
    font-family: "Symbols";
    display: inline-block;
    margin: 0 5px;
}

.message
{
    margin-bottom: 1px;
    padding: 16px 24px;
}

.contactName
{
    font-weight: 600;
    font-size: 15px;
}

.messagePreview
{
    font-size: 12px;
    color: #FFFFFF;
    color: rgba(255, 255, 255, .4);
}

.listView-container
{
    position: absolute;
    bottom: 0;
    top: 50px;
    left: 0;
    right: 0;
}


.listView
{
    height: 100%;
}

@media only screen and (max-width: 800px)
{
    .blog-split.win-splitview.win-splitview-pane-opened .win-splitview-contentwrapper,
    .blog-split.win-splitview.win-splitview-pane-closed .win-splitview-pane
    {
        display: none;
    }
    .blog-split.win-splitview.win-splitview-pane-opened .win-splitview-panewrapper,
    .blog-split.win-splitview.win-splitview-pane-opened .win-splitview-pane
    {
        width: 100%;
        display: block;
    }
}
@media only screen and (min-width: 801px)
{
    .blog-split.win-splitview.win-splitview-pane-opened .win-splitview-pane,
    .blog-split.win-splitview.win-splitview-pane-closed .win-splitview-pane
    {
        width: 320px;
        display: block;
    }

    .blog-split .article-header .win-navigation-backbutton
    {
        display: none;
    }
}

.blog-split article
{
    max-width: 1024px;
}

.blog-split .article-header h2
{
    display: inline;
}

.blog-split .win-splitview-content
{
    padding-top: 25px;
    padding-left: 25px;
    width: calc(-50px + 100%);
}

.all-applications::before
{
    content: "\E179";
}

